:lipstick: fix format visual margin to prevent cut off shadow

--- a/frontend/scss/components/molecules/format-visual.scss
+++ b/frontend/scss/components/molecules/format-visual.scss
@@ -39,7 +39,7 @@ There are specific files for each format, to keep css rendering low.
     padding: 0;
   }
 
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 5em;
   }
   
